# performance

./: mkdocs.yml  pyproject.toml
app/: contract.py  funcao_inicial_.py
src/: backend.py
tests/: test_contract.py  test_funcao_inicial.py
